<resources>
    <string name="app_name">METRIC</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_acc">Masuk ke\nAkun Anda</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="password_confirm">Konfirmasi Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="no_acc">Belum memiliki akun?</string>
    <string name="register_now">Daftar sekarang</string>
    <string name="regis_acc">Daftar Akun\nBaru Anda</string>
    <string name="choose_division">Pilih divisi</string>
    <string name="have_acc">Sudah memiliki akun?</string>
    <string name="to_login">Masuk sekarang</string>
    <string name="register">Daftar</string>
    <string name="invalid_email">Format email yang anda berikan salah</string>
    <string name="invalid_pass">Password setidaknya memiliki 8 karakter</string>
    <string name="region">Daerah</string>
    <string name="keypoints">Keypoints</string>
    <string name="fab_menu">FAB Menu</string>
    <string name="qr_scan">Scan QR</string>
    <string name="add_keypoints">Tambah Keypoints</string>
    <string name="welcome_to">Selamat datang</string>
    <string name="division">Divisi</string>
    <string name="settings">Pengaturan</string>
    <string name="template_email">user@gmail.com</string>
    <string name="log_out">Keluar</string>
    <string name="are_you_sure">Apakah anda yakin ingin keluar?</string>
    <string name="are_you_sure_delete">Apakah anda yakin ingin menghapus keypoint?</string>

    <string name="log_out_small">keluar</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="add_spec">Tambah Spesifikasi</string>
    <string name="scan_desc">Lakukan scan QR untuk dapat melihat atau menambahkan spesifikasi keypoints</string>
    <string name="scan_title">Arahkan Kamera ke Kode QR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="template_date">01/02/2001</string>
    <string name="detail">Detail</string>
    <string name="add">Tambah</string>
    <string name="telekomunikasi">Telekomunikasi</string>
    <string name="merk_modem_radio">Merk Modem/Radio</string>
    <string name="type">Tipe</string>
    <string name="range_voltage">Range Voltage</string>
    <string name="s_n">S/N</string>
    <string name="sim_card_main">SIM Card (Utama)</string>
    <string name="provider_sim_card">Provider SIM Card</string>
    <string name="sim_card_backup">SIM Card (Cadangan)</string>
    <string name="no_sim_card">Nomor SIM Card</string>
    <string name="rtu">RTU</string>
    <string name="merk">Merk</string>
    <string name="change_date">Tanggal Penggantian</string>
    <string name="baterai">Baterai</string>
    <string name="notes">Keterangan</string>
    <string name="additional_notes">Catatan</string>
    <string name="os">OS</string>
    <string name="backup_volt">Backup Volt</string>
    <string name="main_volt">Main Volt</string>
    <string name="rectifier">Rectifier</string>
    <string name="gateway">Gateway</string>
    <string name="spec">Spesifikasi</string>
    <string name="change_spec">Perubahan Spesifikasi %d</string>
    <string name="issue">Gangguan</string>
    <string name="default_issue_desc">Keypoints ini mengalami gangguan</string>
    <string name="desc_keypoints">Deskripsi Keypoints</string>
    <string name="choose_keypoints_type">Pilih Jenis Keypoints</string>
    <string name="region_keypoints">Daerah Keypoints</string>
    <string name="name_keypoints">Nama Keypoints</string>
    <string name="next">Selanjutnya</string>
    <string name="detail_spec">Detail Spesifikasi</string>
    <string name="tab_spec">Spesifikasi</string>
    <string name="tab_history">Historis</string>
    <string name="tab_issue">Gangguan</string>
    <string name="change_detail">Detail Perubahan</string>
    <string name="menu_pdf">Export dalam PDF</string>
    <string name="menu_excel">Export dalam Excel</string>
    <string name="menu_keypoint_delete">Hapus Keypoint</string>
    <string name="no_history">Keypoint ini tidak memiliki\nriwayat perubahan spesifikasi</string>
    <string name="upcoming_feature">Fitur ini akan segera hadir</string>
    <string name="search">Pencarian</string>
    <string name="device">Perangkat</string>
    <string name="nama_perangkat">Nama Perangkat</string>
</resources>